--- a/TD/TD2/interface_graphique_avec_tkinter.ipynb
+++ b/TD/TD2/interface_graphique_avec_tkinter.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Interface graphique\n",
+    "#  Interface graphique avec tkinter\n",
     "\n",
     "\n",
     "Ce [site](http://tkinter.fdex.eu/index.html) recense les méthodes utilisables dans les différents widgets, et permet de retrouver rapidement des informations à leur sujet.\n"
