--- a/TD/TD1/listes_en_python.ipynb
+++ b/TD/TD1/listes_en_python.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "answer"
@@ -51,41 +51,12 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
-   "source": [
-    "Quelle est la complexité asymptotique de la fonction `insertion_tableau` ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "run_control": {
-     "frozen": false
-    },
-    "tags": [
-     "answer"
-    ]
-   },
-   "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
-    "\n",
-    "\n"
+    "def insertion_tableau(L, v, i):\n",
+    "    n = len(L)\n",
+    "    L.append(0)\n",
+    "    for j in range(n, i, -1):\n",
+    "        L[j] = L[j - 1]\n",
+    "    L[i] = v"
    ]
   },
   {
@@ -107,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "answer"
@@ -115,41 +86,11 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
-   "source": [
-    "Quelle est la complexité de la fonction `suppression_tableau` ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "run_control": {
-     "frozen": false
-    },
-    "tags": [
-     "answer"
-    ]
-   },
-   "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
-    "\n",
-    "\n"
+    "def suppression_tableau(L, i):\n",
+    "    n = len(L)\n",
+    "    for j in range(i, n - 1):\n",
+    "        L[j] = L[j + 1]\n",
+    "    L.pop()"
    ]
   },
   {
@@ -182,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "answer"
@@ -190,41 +131,11 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
-   "source": [
-    "Quelle est la complexité asymptotique de la fonction `copie_tableau` ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "run_control": {
-     "frozen": false
-    },
-    "tags": [
-     "answer"
-    ]
-   },
-   "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
-    "\n",
-    "\n"
+    "def copie_tableau(L):\n",
+    "    copie = []\n",
+    "    for e in L:\n",
+    "        copie.append(e)\n",
+    "    return copie"
    ]
   },
   {
@@ -285,19 +196,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "answer"
-    ]
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
+    "def minimum_tableau(L):\n",
+    "    min_val = L[0]\n",
+    "    for e in L:\n",
+    "        if e < min_val:\n",
+    "            min_val = e\n",
+    "    return min_val"
    ]
   },
   {
@@ -315,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "answer"
@@ -323,41 +231,8 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
-   "source": [
-    "- Quelle est la complexité dans le pire des cas de chacune de ces fonctions ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "run_control": {
-     "frozen": false
-    },
-    "tags": [
-     "answer"
-    ]
-   },
-   "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
-    "\n",
-    "\n"
+    "def minimum_tableau_trie(L):\n",
+    "    return L[0]"
    ]
   },
   {
@@ -388,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "answer"
@@ -396,11 +271,8 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
+    "def ajouter_tableau(L, v):\n",
+    "    L.append(v)"
    ]
   },
   {
@@ -418,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "answer"
@@ -426,41 +298,14 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
-   "source": [
-    "- Quelle est la complexité dans le pire des cas de chacune de ces fonctions ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "run_control": {
-     "frozen": false
-    },
-    "tags": [
-     "answer"
-    ]
-   },
-   "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
-    "\n",
-    "\n"
+    "def ajouter_tableau_trie(L, v):\n",
+    "    n = len(L)\n",
+    "    L.append(v)\n",
+    "    i = n - 1\n",
+    "    while i >= 0 and L[i] > v:\n",
+    "        L[i + 1] = L[i]\n",
+    "        i -= 1\n",
+    "    L[i + 1] = v"
    ]
   },
   {
@@ -493,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "answer"
@@ -501,11 +346,11 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
+    "def supprimer_tableau(L, id):\n",
+    "    n = len(L)\n",
+    "    for i in range(id, n - 1):\n",
+    "        L[i] = L[i + 1]\n",
+    "    L.pop()"
    ]
   },
   {
@@ -523,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "answer"
@@ -531,41 +376,11 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
-   "source": [
-    "- Quelle est la complexité dans le pire des cas de chacune de ces fonctions ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "run_control": {
-     "frozen": false
-    },
-    "tags": [
-     "answer"
-    ]
-   },
-   "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
-    "\n",
-    "\n"
+    "def supprimer_tableau_trie(L, id):\n",
+    "    n = len(L)\n",
+    "    for i in range(id, n - 1):\n",
+    "        L[i] = L[i + 1]\n",
+    "    L.pop()"
    ]
   },
   {
@@ -611,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "tags": [
      "answer"
@@ -619,11 +434,17 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
+    "def deplacer(T, k):\n",
+    "    gauche, droite = 0, len(T) - 1\n",
+    "    while gauche <= droite:\n",
+    "        if T[gauche] < k:\n",
+    "            gauche += 1\n",
+    "        elif T[droite] >= k:\n",
+    "            droite -= 1\n",
+    "        else:\n",
+    "            T[gauche], T[droite] = T[droite], T[gauche]\n",
+    "            gauche += 1\n",
+    "            droite -= 1"
    ]
   },
   {
@@ -643,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "tags": [
      "answer"
@@ -651,11 +472,28 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
+    "def test_unitaires():\n",
+    "    T = [1, 5, 3, 10, 17]\n",
+    "    deplacer(T, 5)\n",
+    "    print(T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ae977a0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 10, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_unitaires()"
    ]
   }
  ],
@@ -676,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.9"
   },
   "toc": {
    "base_numbering": 1,
