--- a/TD/TD3/dictionnaires.ipynb
+++ b/TD/TD3/dictionnaires.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,36 +43,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Java', 'Algorithmique', [{'nom': 'Martin', 'prenom': 'Jean', 'Dept': '95'}, {'nom': 'Mohamed', 'prenom': 'Ali', 'Dept': '93'}, {'nom': 'Durand', 'prenom': 'Bertrand', 'Dept': '95'}]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(list(cours.values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['nom cours', 'theme', 'etudiants']\n"
+     ]
+    }
+   ],
    "source": [
     "print(list(cours))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Algorithmique\n"
+     ]
+    }
+   ],
    "source": [
     "print(cours['theme'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Martin\n"
+     ]
+    }
+   ],
    "source": [
     "tabE=cours['etudiants']\n",
     "etud= tabE[0]\n",
@@ -95,15 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'nom': 'Martin', 'prenom': 'Jean', 'Dept': '95'}, {'nom': 'Mohamed', 'prenom': 'Ali', 'Dept': '93'}, {'nom': 'Durand', 'prenom': 'Bertrand', 'Dept': '95'}]\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n",
-    "\n"
+    "print(cours['etudiants'])"
    ]
   },
   {
@@ -121,9 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nom': 'Mohamed', 'prenom': 'Ali', 'Dept': '93'}\n",
+      "93\n"
+     ]
+    }
+   ],
    "source": [
     "etds=cours['etudiants']\n",
     "tmp1=etds[1]\n",
@@ -154,9 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93\n"
+     ]
+    }
+   ],
    "source": [
     "print (cours['etudiants'][1]['Dept'])"
    ]
@@ -201,15 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n",
-    "\n"
+    "lunes = {\"Mercure\": 0,\n",
+    " \"Vénus\": 0,\n",
+    " \"Terre\": 1,\n",
+    " \"Mars\": 2,\n",
+    " \"Jupiter\": 63,\n",
+    " \"Saturne\": 61,\n",
+    " \"Uranus\": 27,\n",
+    " \"Neptune\": 11}"
    ]
   },
   {
@@ -234,15 +290,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n",
-    "\n"
+    "lunes[\"Neptune\"] = 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le nombre de satellites de la Terre: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Le nombre de satellites de la Terre:\", lunes[\"Terre\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liste des planètes: ['Mercure', 'Vénus', 'Terre', 'Mars', 'Jupiter', 'Saturne', 'Uranus', 'Neptune']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Liste des planètes:\", list(lunes.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de satellites de chaque planète:\n",
+      "Mercure: 0\n",
+      "Vénus: 0\n",
+      "Terre: 1\n",
+      "Mars: 2\n",
+      "Jupiter: 63\n",
+      "Saturne: 61\n",
+      "Uranus: 27\n",
+      "Neptune: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Nombre de satellites de chaque planète:\")\n",
+    "for lunes, satellites in lunes.items():\n",
+    "    print(f\"{lunes}: {satellites}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre total de satellites : 165\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_satellites = sum(lunes.values())\n",
+    "print(f\"Nombre total de satellites : {total_satellites}\")"
    ]
   },
   {
@@ -286,15 +417,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Prix': 0.99, 'Quantité': 1, 'Couleur': 'Noir'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n",
-    "\n"
+    "def ajout_reference():\n",
+    "    prix = float(input(\"Entrez le prix de l'article : \"))\n",
+    "    quantite = int(input(\"Entrez la quantité de l'article : \"))\n",
+    "    couleur = input(\"Entrez la couleur de l'article : \")\n",
+    "    reference = {\"Prix\": prix,\n",
+    "                 \"Quantité\": quantite,\n",
+    "                 \"Couleur\": couleur}\n",
+    "    return reference\n",
+    "ajout_reference()"
    ]
   },
   {
@@ -314,15 +460,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ajout d'une nouvelle référence\n",
+      "Ajout d'une nouvelle référence\n",
+      "Le montant total du stock est : 4.97 €\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
+    "def calcul_total(stock):\n",
+    "    total = 0\n",
+    "    for item in stock:\n",
+    "        total += item[\"Prix\"] * item[\"Quantité\"]\n",
+    "    return total\n",
     "\n",
-    "\n"
+    "def programme_principal():\n",
+    "    stock = []\n",
+    "    while True:\n",
+    "        print(\"Ajout d'une nouvelle référence\")\n",
+    "        reference = ajout_reference()\n",
+    "        stock.append(reference)\n",
+    "        continuer = input(\"Souhaitez-vous ajouter une autre référence ? (oui/non) : \").lower()\n",
+    "        if continuer != 'oui':\n",
+    "            break\n",
+    "    total_stock = calcul_total(stock)\n",
+    "    print(f\"Le montant total du stock est : {total_stock:.2f} €\")\n",
+    "programme_principal()"
    ]
   },
   {
@@ -502,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
