--- a/TD/TD3/dictionnaires.ipynb
+++ b/TD/TD3/dictionnaires.ipynb
@@ -520,14 +520,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chat': 'cat', 'chien': 'dog', 'maison': 'house', 'pomme': 'apple', 'soleil': 'sun', 'étoile': 'star'}\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n"
+    "dictionnaire = {\"chat\": \"cat\", \"chien\": \"dog\", \"maison\": \"house\", \"pomme\": \"apple\", \"soleil\": \"sun\"}\n",
+    "dictionnaire[\"étoile\"] = \"star\"\n",
+    "print(dictionnaire)"
    ]
   },
   {
@@ -544,13 +551,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ajout : pomme -> apple\n",
+      "Le mot 'chat' existe déjà dans le dictionnaire.\n",
+      "{'chat': 'cat', 'chien': 'dog', 'maison': 'house', 'pomme': 'apple'}\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n"
+    "def ajoute(mot1, mot2, dico):\n",
+    "    if mot1 not in dico:\n",
+    "        dico[mot1] = mot2\n",
+    "        print(f\"Ajout : {mot1} -> {mot2}\")\n",
+    "    else:\n",
+    "        print(f\"Le mot '{mot1}' existe déjà dans le dictionnaire.\")\n",
+    "dictionnaire = {\"chat\": \"cat\", \"chien\": \"dog\", \"maison\": \"house\"}\n",
+    "ajoute(\"pomme\", \"apple\", dictionnaire)\n",
+    "ajoute(\"chat\", \"feline\", dictionnaire)\n",
+    "print(dictionnaire)"
    ]
   },
   {
@@ -564,13 +588,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n",
+      "dog\n",
+      "house\n",
+      "apple\n",
+      "sun\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n"
+    "def afficher_valeurs(dico):\n",
+    "    for valeur in dico.values():\n",
+    "        print(valeur)\n",
+    "dictionnaire = {\"chat\": \"cat\", \"chien\": \"dog\", \"maison\": \"house\", \"pomme\": \"apple\", \"soleil\": \"sun\"}\n",
+    "afficher_valeurs(dictionnaire)"
    ]
   },
   {
@@ -587,14 +625,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'maison': 'house', 'pomme': 'apple', 'soleil': 'sun'}\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n"
+    "def supprime(car, dico):\n",
+    "    cles_a_supprimer = [cle for cle in dico if cle.startswith(car)]\n",
+    "    for cle in cles_a_supprimer:\n",
+    "        del dico[cle]\n",
+    "dictionnaire = {\"chat\": \"cat\", \"chien\": \"dog\", \"maison\": \"house\", \"pomme\": \"apple\", \"soleil\": \"sun\"}\n",
+    "supprime(\"c\", dictionnaire)\n",
+    "print(dictionnaire)"
    ]
   },
   {
@@ -615,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,14 +692,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".... . .-.. .-.. --- .-- --- .-. .-.. -..\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n"
+    "def texte_en_morse(texte):\n",
+    "    texte = texte.upper()\n",
+    "    morse_code = []\n",
+    "    for char in texte:\n",
+    "        if char.isalnum():\n",
+    "            morse_code.append(morse_code_dict[char])\n",
+    "    return ' '.join(morse_code)\n",
+    "texte = \"Hello world !\"\n",
+    "morse = texte_en_morse(texte)\n",
+    "print(morse)"
    ]
   }
  ],
