--- a/TD/TD4/fichiers_texte.ipynb
+++ b/TD/TD4/fichiers_texte.ipynb
@@ -19,15 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n",
-    "\n"
+    "with open(\"nombres.txt\", \"w\") as f:\n",
+    "    for i in range(10000):\n",
+    "        f.write(f\"{i}\\n\")\n",
+    "with open(\"nombres.txt\", \"r\") as f:\n",
+    "    nombres = [int(line.strip()) for line in f]"
    ]
   },
   {
@@ -40,15 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n",
-    "\n"
+    "with open(\"nombres.txt\", \"w\") as f:\n",
+    "    f.write(\";\".join(map(str, range(10000))))\n",
+    "with open(\"nombres.txt\", \"r\") as f:\n",
+    "    nombres = list(map(int, f.read().split(\";\")))"
    ]
   },
   {
@@ -63,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n"
+    "prenoms = [\"Alice\", \"Bob\", \"Charlie\", \"David\", \"Emma\"]  # Exemple de prénoms\n",
+    "with open(\"prenoms.txt\", \"w\") as f:\n",
+    "    for prenom in prenoms:\n",
+    "        f.write(prenom + \"\\n\")"
    ]
   },
   {
@@ -84,14 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice,5\n",
+      "Bob,3\n",
+      "Charlie,7\n",
+      "David,5\n",
+      "Emma,4\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n"
+    "with open(\"prenoms.txt\", \"r\") as f:\n",
+    "    for line in f:\n",
+    "        prenom = line.strip()\n",
+    "        print(f\"{prenom},{len(prenom)}\")"
    ]
   },
   {
@@ -105,13 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n"
+    "with open(\"prenoms.txt\", \"r\") as infile, open(\"prenoms.csv\", \"w\") as outfile:\n",
+    "    for line in infile:\n",
+    "        prenom = line.strip()\n",
+    "        outfile.write(f\"{prenom},{len(prenom)}\\n\")"
    ]
   },
   {
@@ -125,15 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n",
-    "\n"
+    "import json\n",
+    "from collections import Counter\n",
+    "with open(\"files/zadig.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    texte = f.read()\n",
+    "frequence = Counter(texte)\n",
+    "with open(\"files/statistiques.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(frequence, f, ensure_ascii=False, indent=4)"
    ]
   }
  ],
@@ -153,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
