--- a/TD/TD5/tables_de_hachage.ipynb
+++ b/TD/TD5/tables_de_hachage.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "answer"
@@ -64,11 +64,9 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
+    "def rechercher(table, entier):\n",
+    "    indice = entier % 10\n",
+    "    return entier in table[indice]"
    ]
   },
   {
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "answer"
@@ -96,11 +94,10 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
+    "def ajouter(table, entier):\n",
+    "    indice = entier % 10\n",
+    "    if entier not in table[indice]:\n",
+    "        table[indice].add(entier)"
    ]
   },
   {
@@ -122,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "answer"
@@ -130,11 +127,10 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
+    "def supprimer(table, entier):\n",
+    "    indice = entier % 10\n",
+    "    if entier in table[indice]:\n",
+    "        table[indice].remove(entier)"
    ]
   },
   {
@@ -169,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "removeFromLatex"
@@ -177,32 +173,17 @@
    },
    "outputs": [],
    "source": [
-    "# Fonction de hachage définie en cours\n",
-    "\n",
-    "def hachage(str):\n",
+    "def hachage(chaine):\n",
     "    nombre = 0\n",
     "    i = 0\n",
-    "    while i < len(str):\n",
-    "        nombre += ord(str[i])\n",
+    "    while i < len(chaine):\n",
+    "        nombre += ord(chaine[i])\n",
     "        i += 1\n",
-    "    return nombre"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "answer"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "    return nombre\n",
     "\n",
-    "\n"
+    "def rechercher2(table, valeur):\n",
+    "    cle = hachage(str(valeur)) % len(table)\n",
+    "    return valeur in table[cle]"
    ]
   },
   {
@@ -222,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "answer"
@@ -230,11 +211,10 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
+    "def ajouter2(table, valeur):\n",
+    "    cle = hachage(str(valeur)) % len(table)\n",
+    "    if valeur not in table[cle]:\n",
+    "        table[cle].append(valeur)"
    ]
   },
   {
@@ -257,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "answer"
@@ -265,11 +245,10 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
-    "\n",
-    "\n"
+    "def supprimer2(table, entier):\n",
+    "    cle = hachage(str(entier)) % len(table)\n",
+    "    if entier in table[cle]:\n",
+    "        table[cle].remove(entier)"
    ]
   },
   {
@@ -310,14 +289,19 @@
     ]
    },
    "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
+    "**Réponse :** \n",
+    "\n",
+    "`Indice` : 0  1  2  3  4  5  6  7  8\n",
+    "              \n",
+    " `Valeur` : . 28 19 20 12  5 15 33 17\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "answer"
@@ -325,11 +309,27 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "def h1(k, m):\n",
+    "    return k % m\n",
     "\n",
-    "\n"
+    "def inserer(table, valeur):\n",
+    "    m = len(table)\n",
+    "    for i in range(m):\n",
+    "        index = (h1(valeur, m) + i) % m\n",
+    "        if table[index] is None:\n",
+    "            table[index] = valeur\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "def rechercher(table, valeur):\n",
+    "    m = len(table)\n",
+    "    for i in range(m):\n",
+    "        index = (h1(valeur, m) + i) % m\n",
+    "        if table[index] is None:\n",
+    "            return False\n",
+    "        if table[index] == valeur:\n",
+    "            return True\n",
+    "    return False"
    ]
   },
   {
@@ -344,7 +344,7 @@
     ]
    },
    "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
+    "**Réponse :** Si on remplace une valeur par `None`, cela casse la chaîne de sondage, et une recherche peut s’arrêter trop tôt, pensant que la valeur n’est pas là.\n",
     "\n",
     "\n"
    ]
@@ -381,9 +381,15 @@
     ]
    },
    "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
+    "**Réponse :** \n",
     "\n",
-    "\n"
+    "`Indice` : 0   1   2   3   4   5   6   7   8   9   10  11  12\n",
+    "\n",
+    "`Valeur` : .   .  28  17  33   5  19  20  .   .   15   .  12\n",
+    "\n",
+    "\n",
+    "\n",
+    "Si `h₂(k)` et `m` ne sont pas premiers entre eux, la fonction de hachage ne peut pas explorer toutes les cases de la table : certaines positions deviennent inaccessibles. Résultat : on peut croire que la table est pleine alors qu’il reste de la place → échec de l'insertion."
    ]
   }
  ],
@@ -404,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.9"
   },
   "toc": {
    "base_numbering": 1,
